--- a/public/index.html
+++ b/public/index.html
@@ -941,7 +941,7 @@
                                     <i class="fab fa-unsplash text-white text-xl font-bold"></i>
                                     <div class="absolute -inset-1 bg-black rounded-lg opacity-0 group-hover:opacity-30 blur-md transition-opacity duration-300 -z-10"></div>
                                 </a>
-                                <a href="https://wa.me/919876543210" target="_blank" rel="noopener noreferrer" class="group relative w-14 h-14 rounded-lg bg-green-500 hover:shadow-lg hover:shadow-green-500/50 transition-all duration-300 transform hover:scale-110 flex items-center justify-center">
+                                <a href="https://wa.me/7977651751" target="_blank" rel="noopener noreferrer" class="group relative w-14 h-14 rounded-lg bg-green-500 hover:shadow-lg hover:shadow-green-500/50 transition-all duration-300 transform hover:scale-110 flex items-center justify-center">
                                     <i class="fab fa-whatsapp text-white text-xl font-bold"></i>
                                     <div class="absolute -inset-1 bg-green-500 rounded-lg opacity-0 group-hover:opacity-30 blur-md transition-opacity duration-300 -z-10"></div>
                                 </a>
@@ -1059,7 +1059,7 @@
                         </span>
                         <div class="absolute inset-0 bg-white/20 -translate-y-full group-hover:translate-y-0 transition-transform duration-300"></div>
                     </a>
-                    <a href="https://wa.me/919876543210" target="_blank" rel="noopener noreferrer" class="px-6 sm:px-8 py-2.5 sm:py-3 border border-primary/50 text-primary text-xs sm:text-sm font-bold rounded-full hover:bg-primary/10 transition-all duration-300">
+                    <a href="https://wa.me/7977651751" target="_blank" rel="noopener noreferrer" class="px-6 sm:px-8 py-2.5 sm:py-3 border border-primary/50 text-primary text-xs sm:text-sm font-bold rounded-full hover:bg-primary/10 transition-all duration-300">
                         WhatsApp
                     </a>
                 </div>
@@ -1169,8 +1169,8 @@
             <!-- Bottom Section - Copyright -->
             <div class="flex flex-col sm:flex-row items-center justify-between gap-6 text-center sm:text-left">
                 <div class="text-gray-500 text-xs sm:text-sm">
-                    <p>&copy; 2024-2026 <span class="text-primary font-semibold">Harshank Creates</span>. All Rights Reserved.</p>
-                    <p class="mt-1 text-gray-600">Crafted with <span class="text-primary">&nbsp;❤&nbsp;</span> for visual storytelling</p>
+                    <p>&copy; 2021-2026 <span class="text-primary font-semibold">Harshank Creates</span>. All Rights Reserved.</p>
+                    <p class="mt-1 text-gray-600">Crafted with <span class="text-primary">&nbsp;❤&nbsp;</span>- By Dhruv Mandal</p>
                 </div>
                 <div class="flex flex-wrap justify-center sm:justify-end gap-4 sm:gap-6">
                     <a href="#" class="text-gray-500 hover:text-primary text-xs sm:text-sm transition-colors duration-300">Privacy Policy</a>
@@ -1208,7 +1208,7 @@
                 <div class="absolute -inset-0.5 bg-white/20 rounded-full opacity-0 group-hover:opacity-40 blur-md transition-opacity duration-300 -z-10"></div>
             </a>
             
-            <a href="https://wa.me/919876543210" target="_blank" rel="noopener noreferrer" class="pointer-events-auto group relative flex items-center justify-center">
+            <a href="https://wa.me/7977651751" target="_blank" rel="noopener noreferrer" class="pointer-events-auto group relative flex items-center justify-center">
                 <div class="w-14 h-14 rounded-full bg-green-500 flex items-center justify-center shadow-lg hover:shadow-2xl hover:shadow-green-500/60 transition-all duration-300 transform hover:scale-125 hover:-translate-y-1">
                     <i class="fab fa-whatsapp text-white text-xl font-bold"></i>
                 </div>
